@@ -12,7 +12,11 @@ Revision history for Perl extension Net::SSLeay.
     Patch from kmx to add reentrancy protection for callbacks in
     multithreading.
     Updated ppport.h, fixed some complaints from ppport.h
-    
+    Fixed a problem with CTX_use_PKCS12_file on Windows, since the file was
+    not opened in binary mode. Reported by kmx.
+    Added resources line for SVN repository to Makefile. Suggested by kmx.
+    Fixed complaints unders some windows compilers about cast from pointer to integer of
+    different size. Suggested by xmx.
 
 1.42	 2011-10-03
     Fixed incorrect documentation of how to enable CRL checking. Patched
